# rugs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  apply_migrations.bat  apply_migrations.sh  config.json.dist  config.yaml.dist  sqlx-data.json
.github/workflows/: publish_docker.yml  test.yml
.sqlx/: query-097af1c429b1ecce64dd443daa441623ddabe56b157a80d42fffa17b60823266.json  query-1e78779d34f558b44273633174911f72f130472a4fe0c2c1da9b1c12303c0867.json  query-67fa42b277f1ca5214cb3737a58f22f403f4902a934e8b9abc81baa2a25b13a8.json  query-d49ae22882383ff5fddc27bd9d015e83d4fcf2c177273500261467a645dd6bff.json  query-f3e070b134ccb4d1ca5fe648abfbf38602f1a3c9f128379f419aef7d367af836.json  query-f661ddadf402f7ea698419ecb6dc87698d8c84999e3857b89923cab78027c3c4.json  query-f69bfcdca1c2ce7ae04bc343f41c9898fa8565f4436c8aa24524f7a2e5850def.json
docker/: migrate_and_run.sh  setup_rust_cross_compile.sh
docker/cross_build_setup/: README.md  native.sh
docker/cross_build_setup/linux/amd64/linux/: amd64.sh  arm64.sh
examples/: docker-compose.yml
migrations/: 20220503-badges.sql  20220505192322_badges.sql  20220512202503_badges_v2.sql  20230610233841_badges_with_sequence.sql  20230611001640_add_user_metadata.sql  20230611040641_initial_indices.sql  20230611190427_case_insensitive_projects.sql  20240725130753_projects_stream_depth.sql
src/: error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs
